<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_hotel">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/topic_hotel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/htxt_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/txtName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hname"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/htxt_Add"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/txtAge1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/haddress"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/htxt_phone"
            android:textSize="18dp"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryText"/>


        <EditText
            android:id="@+id/txtCon1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/hphone"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/htxt_Email"
            android:textSize="18dp"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:id="@+id/txtEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/hemail"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/htxt_Star"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hstar"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/htxt_desc"
            android:textSize="18dp"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:id="@+id/txtDes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hdesc"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/guideAdd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradient"
            android:onClick="add_hotel"
            android:shadowColor="@color/colorText"
            android:text="@string/addguide"
            android:textColor="@color/colorText"
            android:textFontWeight="100"
            android:textSize="20dp" />


    </LinearLayout>
</ScrollView>