<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/topic_guide"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtxt_name"
        android:textSize="18dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtxt_age"
        android:textSize="18dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/age"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtxt_phone"
        android:textSize="18dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"/>


    <EditText
        android:id="@+id/txtCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtxt_email"
        android:textSize="18dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/gtxt_vehicle"
        android:textSize="18dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"/>

        <Spinner
            android:id="@+id/spinnerVehicle"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="174dp"
            android:layout_marginTop="-34dp"
            android:popupBackground="@color/colorText"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dropdown"
            android:scrollbars="none"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gtxt_desc"
        android:textSize="18dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"/>

    <EditText
        android:id="@+id/txtDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:textColor="@color/colorSecondaryText" />



        <Button
            android:id="@+id/guideAdd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradient"
            android:shadowColor="@color/colorText"
            android:text="@string/addguide"
            android:textColor="@color/colorText"
            android:textFontWeight="100"
            android:textSize="20dp" />
</LinearLayout>
</ScrollView>