<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorDivider"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".DelUpdateActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_view_list_black_24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-45dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/guide_list"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

<<<<<<< HEAD
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/key"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textColor="@color/colorSecondaryText"
            android:hint="Enter Name"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editNic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nic"
            android:textColor="@color/colorSecondaryText"
            android:hint="Enter NIC"
            android:layout_marginBottom="20dp"/>



        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/age"
            android:textColor="@color/colorSecondaryText"
            android:hint="Enter Age"
            android:layout_marginBottom="20dp"/>




        <EditText
            android:id="@+id/editCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phone"
            android:textColor="@color/colorSecondaryText"
            android:hint="Enter Contact Number"
            android:layout_marginBottom="20dp"/>



        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textColor="@color/colorSecondaryText"
            android:hint="Enter Email"
            android:layout_marginBottom="20dp"/>


        <EditText
            android:id="@+id/editDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description"
            android:textColor="@color/colorSecondaryText"
            android:hint="Enter Description"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/gUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/gradient"
            android:shadowColor="@color/colorText"
            android:text="@string/gUpdate"
            android:textColor="@color/colorText"
            android:textFontWeight="100"
            android:textSize="20dp" />

=======
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="100sp"
                android:src="@drawable/profile"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_name"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/hospital_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/update"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/gradient"
                        android:onClick="update"
                        android:shadowColor="@color/colorText"
                        android:text="@string/update"
                        android:textColor="@color/colorText"
                        android:textFontWeight="100"
                        android:textSize="20dp" />


                    <Button
                        android:id="@+id/delete"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/gradient"
                        android:onClick="delete"
                        android:shadowColor="@color/colorText"
                        android:text="@string/delete"
                        android:textColor="@color/colorText"
                        android:textFontWeight="100"
                        android:textSize="20dp" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
>>>>>>> 53d715b956432dfbfec8ef0de71371559eec7f72
    </LinearLayout>
</ScrollView>