<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddHotelGuide">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:layout_marginLeft="65dp"
        android:src="@drawable/ic_place_black_24dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-47dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:text="@string/placename"
        />


    <Button
        android:id="@+id/hotel"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/gradient"
        android:onClick="hotel"
        android:shadowColor="@color/colorText"
        android:text="@string/hotel"
        android:textColor="@color/colorText"
        android:textFontWeight="100"
        android:textSize="20dp" />

    <Button
        android:id="@+id/addHotel_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradient"
        android:onClick="guide"
        android:shadowColor="@color/colorText"
        android:text="@string/guide"
        android:textColor="@color/colorText"
        android:textFontWeight="100"
        android:textSize="20dp"
        />
</LinearLayout>