<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hotelviewdata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hotelimg"
            android:layout_width="110dp"
            android:layout_height="100sp"
            android:src="@drawable/profile"></ImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updatehotelbtn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/gradient"
                    android:onClick="hupdate"
                    android:shadowColor="@color/colorText"
                    android:text="@string/update"
                    android:textColor="@color/colorText"
                    android:textFontWeight="100"
                    android:textSize="20dp" />


                <Button
                    android:id="@+id/deletehotelbtn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/gradient"
                    android:onClick="hdelete"
                    android:shadowColor="@color/colorText"
                    android:text="@string/delete"
                    android:textColor="@color/colorText"
                    android:textFontWeight="100"
                    android:textSize="20dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/hotel_nametxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel"
                android:textColor="@color/colorPrimaryText"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/hotel_descTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />




        </LinearLayout>
    </LinearLayout>

</LinearLayout>