<?xml version="1.0" encoding="utf-8"?>


    <!-- TODO: Update blank fragment layout -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp"
    android:scrollbars="vertical"
    tools:context=".guideList">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_view_list_black_24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-45dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/guide_list"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="100sp"
                android:src="@drawable/profile"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/txtName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_name"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/txtDes1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/updatebtn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/gradient"
                        android:shadowColor="@color/colorText"
                        android:text="@string/update"
                        android:textColor="@color/colorText"
                        android:textFontWeight="100"
                        android:textSize="20dp" />


                    <Button
                        android:id="@+id/deletebtn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/gradient"
                        android:shadowColor="@color/colorText"
                        android:text="@string/delete"
                        android:textColor="@color/colorText"
                        android:textFontWeight="100"
                        android:textSize="20dp" />

                    />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
